@@ -128,6 +128,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #26373: subprocess.Popen.communicate now correctly ignores
+  BrokenPipeError when the child process dies before .communicate()
+  is called in more/all circumstances.
+
 - Issue #21776: distutils.upload now correctly handles HTTPError.
   Initial patch by Claudiu Popa.
 
